<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_form_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openLoginForm"/>

    <Button
        android:id="@+id/dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <Button
        android:id="@+id/recycler_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_btn" />

    <Button
        android:id="@+id/toast_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_button"
        app:layout_constraintTop_toBottomOf="@+id/recycler_btn"
        android:onClick="openToastActivity" />

    <Button
        android:id="@+id/webview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webview_button"
        app:layout_constraintTop_toBottomOf="@+id/toast_btn"
        tools:layout_editor_absoluteX="1dp"
        android:onClick="openWebViewActivity" />

    <Button
        android:id="@+id/dialer_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialer_intent_button"
        app:layout_constraintTop_toBottomOf="@+id/webview_btn" />

    <Button
        android:id="@+id/camera_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_intent_button"
        app:layout_constraintTop_toBottomOf="@+id/dialer_intent_btn" />

    <Button
        android:id="@+id/image_picker_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery_intent_button"
        app:layout_constraintTop_toBottomOf="@id/camera_intent_btn" />

    <Button
        android:id="@+id/idling_resource_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idling_resource_button"
        app:layout_constraintTop_toBottomOf="@+id/image_picker_intent_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>